# PathTrace

./: README.md
code/: CMakeLists.txt  run_all.sh
code/include/: PathTracer.hpp  RayTracer.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  random_utils.hpp  ray.hpp  ray_utils.hpp  rectangle.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
code/src/: main.cpp  mesh.cpp  scene_parser.cpp
code/testcases/: PT_BASIC.txt  PT_CTMat.txt  PT_FRE.txt  PT_NEE.txt  RT_BASIC.txt  scene01_basic.txt
report/: REPORT.tex  convert.py  report.aux  report.toc
